fix ugly scrollbars

--- a/client/src/css/index.scss
+++ b/client/src/css/index.scss
@@ -21,6 +21,24 @@ code {
   font-family: "Source Code Pro", monospace;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+  border-radius: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $gray-800;
+  border-radius: 16px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $gray-700;
+}
+
 .container {
   padding: 0.7em;
 }
@@ -32,6 +50,7 @@ code {
 .card-body {
   padding: 0.85em;
   max-height: 670px;
+  overflow-x: hidden;
   overflow-y: scroll;
 }
 
